--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs
+/WebGentle BookStore/.vs/WebGentle BookStore/v16
+/WebGentle BookStore/WebGentle BookStore/obj
