Added Libman to use some client side library

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /WebGentle BookStore/.vs/WebGentle BookStore
 /WebGentle BookStore/WebGentle BookStore/bin/Debug/net5.0/ref
 /WebGentle BookStore/WebGentle BookStore/bin/Debug/net5.0
+/WebGentle BookStore/WebGentle BookStore/wwwroot
