--- a/WebGentle BookStore/WebGentle BookStore/WebGentle BookStore.csproj
+++ b/WebGentle BookStore/WebGentle BookStore/WebGentle BookStore.csproj
@@ -5,4 +5,14 @@
     <RootNamespace>WebGentle_BookStore</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Utils" Version="5.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+    <Folder Include="wwwroot\js\" />
+  </ItemGroup>
+
 </Project>
