--- a/WebGentle BookStore/WebGentle BookStore/WebGentle BookStore.csproj
+++ b/WebGentle BookStore/WebGentle BookStore/WebGentle BookStore.csproj
@@ -11,8 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Data\" />
+    <Folder Include="Models\" />
+    <Folder Include="wwwroot\css\" />
     <Folder Include="wwwroot\images\" />
-    <Folder Include="wwwroot\js\" />
   </ItemGroup>
 
 </Project>
