--- a/WebGentle BookStore/WebGentle BookStore/WebGentle BookStore.csproj
+++ b/WebGentle BookStore/WebGentle BookStore/WebGentle BookStore.csproj
@@ -10,7 +10,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Utils" Version="6.0.0-preview.1.21112.2" />
   </ItemGroup>
 	<ItemGroup>
-	 <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" PrivateAssets="All" />
+	 <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.0-preview.1.21112.2" PrivateAssets="All" />
 </ItemGroup>
 <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="1.0.0-msbuild3-final" />
@@ -19,10 +19,9 @@
 </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
     <Folder Include="Models\" />
     <Folder Include="wwwroot\css\" />
-    <Folder Include="wwwroot\images\" />
+    <Folder Include="wwwroot\images\book\" />
   </ItemGroup>
 
 </Project>
